src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

h1 {
    @apply text-4xl font-bold;
}

h2 {
    @apply text-2xl font-semibold;
}

h3 {
    @apply text-xl font-semibold;
}

input,
select {
    height: 3rem !important;
}

input,
textarea,
select {
    padding: .5rem 1rem !important;
    @apply focus:border-blue-600 focus:outline-none focus:border-2;
}

@media (prefers-color-scheme: dark) {
    input:disabled,
    select:disabled,
    textarea:disabled {
        background-color: #2b2b2b !important;
        color: #ccc !important;
        -webkit-text-fill-color: #ccc !important; /* critical for Safari */
        border-color: #444;
    }
}

